# Software_Project_Architecture_Lab

./: .gitignore  CMakeLists.txt  GildedRoseBackend  sonar-project.properties
.github/workflows/: codeql.yml  sonarcloud.yml  test.yml
docs/: Final_Architecture_Lab_Report.md  first_code_doc.md
src/: main.cpp
src/controller/: AuthController.cpp  AuthController.h  Dispatcher.cpp  Dispatcher.h  ItemController.cpp  ItemController.h
src/dto/: ItemDto.h  UserDto.h
src/interceptor/: TokenInterceptor.cpp  TokenInterceptor.h
src/model/: Item.h  User.h
src/network/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/repository/: MockDatabase.cpp  MockDatabase.h
src/service/: AuthService.cpp  AuthService.h  ExportService.cpp  ExportService.h  GildedRoseService.cpp  GildedRoseService.h  ItemService.cpp  ItemService.h  ReportService.cpp  ReportService.h
src/service/strategy/: ItemStrategy.h
src/utils/: Constants.h  Exceptions.h  Logger.cpp  Logger.h  StringUtil.cpp  StringUtil.h
tests/: AuthControllerTest.cpp  AuthServiceTest.cpp  DispatcherTest.cpp  DtoModelTest.cpp  ExceptionsTest.cpp  ExportServiceTest.cpp  GildedRoseServiceTest.cpp  HttpRequestTest.cpp  HttpResponseTest.cpp  ItemControllerTest.cpp  ItemServiceTest.cpp  ItemStrategyTest.cpp  LoggerTest.cpp  MockDatabaseTest.cpp  ReportServiceTest.cpp  StringUtilTest.cpp  TokenInterceptorTest.cpp
